Tue Sep 10 21:05:28 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/configure.js: added more readme info for the binary
	  package.
	
Mon Sep  9 14:07:06 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed a bug in match="node()" reported by
	  Ben Ko

Mon Sep  9 14:06:25 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in: fixes libary path for x86_64 AMD

Thu Sep  5 10:07:13 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: applied patch from Christophe Merlet to
	  reestablish DESTDIR

Thu Aug 29 21:26:30 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: re-applied the patch from Nathan Myers about
	  a possible memory leak in case of error

Wed Aug 28 13:44:54 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Libxslt-Logo-180x168.gif doc/Libxslt-Logo-90x34.gif:
	  nice logos generated by Marc Liyanage
	* doc/site.xsl *.html: changed the stylesheet to show the new
	  logo and regenerated the pages

Sun Aug 25 17:01:40 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxslt-python-api.xml python/libxslt.c
	  python/libxsltclass.txt python/tests/basic.py: applied a patch
	  from Ralf Mattes providing style.saveResultToString()

Fri Aug 23 13:53:50 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing release 1.0.20
	* doc/*: updated and regenerated the docs

Wed Aug 21 21:27:29 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c: fixed a bug w.r.t. namespace context when
	  doing the evaluation of attribute value templates 
	* libxslt.spec.in python/Makefile.am: fixed some troubles
	  with "make rpm"

Wed Aug 21 18:59:28 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxslt.c: fixed the parameter order when calling
	  Python based extensions.

Wed Aug 21 13:48:07 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c libxslt/xslt.c: fixed bug #89258 and a bit of
	  cleanup.